# MkCheck

./: .gitignore  README.md  mkcheck  mthread  setup.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: .gitignore  index.html
files/: banner.py  split.py  tiks.txt
files/bytheway/: CMakeLists.txt
scripts/: ChimneyBlue_mips.py  ChimneyBlue_x86.py  extract_user.py  get_t.py  miko.py  rtsploit.sh  thread.sh  winbox.py
scripts/get/: g102.py  g153.py  g204.py  g255.py  g51.py  res.py  rsf.py
scripts/miko/: m102.py  m51.py
